update po files

--- a/po/ja.po
+++ b/po/ja.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.0.6\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2017-06-11 00:02-0600\n"
+"POT-Creation-Date: 2017-06-13 17:20-0600\n"
 "PO-Revision-Date: 2017-06-12 00:28+0000\n"
 "Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
-"Language-Team: Japanese "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-3-branch/ja/>\n"
+"Language-Team: Japanese <https://l10n.opensuse.org/projects/icewm/icewm-1-3-"
+"branch/ja/>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -524,8 +524,10 @@ msgid ""
 "  --display=NAME      Use NAME to connect to the X server.\n"
 "  --sync              Synchronize communication with X11 server.\n"
 msgstr ""
-"  -c, --config=FILE   IceWM に対して、 FILE で指定したファイルから設定を読み込むように指示します。\n"
-"  -t, --theme=FILE    IceWM に対して、 FILE で指定したファイルからテーマを読み込むように指示します。\n"
+"  -c, --config=FILE   IceWM に対して、 FILE で指定したファイルから設定を読み"
+"込むように指示します。\n"
+"  -t, --theme=FILE    IceWM に対して、 FILE で指定したファイルからテーマを読"
+"み込むように指示します。\n"
 "\n"
 "  --display=NAME      NAME で指定した指定した X server に接続します。\n"
 "  --sync              X11 サーバとの通信を同期します。\n"
@@ -719,7 +721,8 @@ msgid ""
 "  -c, --config=FILE   Load preferences from FILE.\n"
 "  -t, --theme=FILE    Load the theme from FILE.\n"
 msgstr ""
-"  --notify            シグナル USR1 を送信することで親プロセスに通知を送信します。\n"
+"  --notify            シグナル USR1 を送信することで親プロセスに通知を送信し"
+"ます。\n"
 "  --display=NAME      NAME で指定した指定した X server に接続します。\n"
 "  --sync              X11 サーバとの通信を同期します。\n"
 "\n"
@@ -886,7 +889,8 @@ msgstr "ICEWM_FONT_PATH プロパティの形式が正しくありません"
 #: src/wmapp.cc:531
 #, c-format
 msgid "Multiple references for gradient '%s' in theme '%s'."
-msgstr "テーマ '%2$s' 内のグラデーション \"%1$s\" に対して複数の参照があります。"
+msgstr ""
+"テーマ '%2$s' 内のグラデーション \"%1$s\" に対して複数の参照があります。"
 
 #: src/wmapp.cc:607
 #, c-format
