--- a/po/ca.po
+++ b/po/ca.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.0.9\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2017-06-11 00:02-0600\n"
+"POT-Creation-Date: 2017-06-13 17:20-0600\n"
 "PO-Revision-Date: 2017-06-11 14:13+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-3-branch/ca/>\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/icewm/icewm-1-3-"
+"branch/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1108,8 +1108,8 @@ msgstr ""
 "Variables d'entorn:\n"
 "  XDG_CONFIG_HOME=PATH  Directori per als fitxers de configuració,\n"
 "                      \"$HOME/.config/icewm/\" per defecte.\n"
-"  ICEWM_PRIVCFG=PATH  Directori per als fitxers de configuració de l'usuari,"
-"\n"
+"  ICEWM_PRIVCFG=PATH  Directori per als fitxers de configuració de "
+"l'usuari,\n"
 "                      \"$HOME/.icewm/\" per defecte.\n"
 "  DISPLAY=NAME        Nom del servidor X a usar.\n"
 "  MAIL=URL            Ubicació de la bústia de correu.\n"
