--- a/po/nl.po
+++ b/po/nl.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.2.23\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2017-06-11 00:02-0600\n"
+"POT-Creation-Date: 2017-06-13 17:20-0600\n"
 "PO-Revision-Date: 2017-06-13 11:18+0000\n"
 "Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
-"Language-Team: Dutch "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-3-branch/nl/>\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/icewm/icewm-1-3-"
+"branch/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -710,8 +710,8 @@ msgid ""
 "  -c, --config=FILE   Load preferences from FILE.\n"
 "  -t, --theme=FILE    Load the theme from FILE.\n"
 msgstr ""
-"  --notify            aan ouderproces melden door signaal USR1 te verzenden."
-"\n"
+"  --notify            aan ouderproces melden door signaal USR1 te "
+"verzenden.\n"
 "  --display=NAAM      NAAM gebruiken om te verbinden naar de X-server.\n"
 "  --sync              communicatie met X11-server synchroniseren.\n"
 "\n"
