--- a/doc/icewm.man
+++ b/doc/icewm.man
@@ -10,7 +10,7 @@
 .		if \w'\(rq' .ds rq "\(rq
 .	\}
 .\}
-.TH ICEWM 1 "2017-07-02" "" "IceWM Window Manager"
+.TH ICEWM 1 "2017-07-09" "" "IceWM Window Manager"
 
 .SH NAME
 icewm \- lightweight X11 window manager
@@ -34,6 +34,8 @@ The IceWM menu allows to choose between them.
 Generally, it tries to make all functions available
 by both keyboard and mouse.
 Configurability is very good through various preferences files.
+However, configuring IceWM is seldom needed:
+it works fine out of the box.
 
 IceWM consists of several programs:
 
@@ -49,13 +51,12 @@ to active applications, and to a small set of monitoring applets.
 .B icewmbg
 - the background setting application. It can assign plain
 background color or images in different formats to the X background,
-shared or separated for different workspaces. This program should be
-started before
-.I icewm
-.
+shared or separated for different workspaces.
+This program should be started before
+.I icewm.
 
 .B icewmtray
-- catches the Docklet objects installed by various
+- catches the Docklet objects which are installed by various
 applications like PSI.
 
 .B icewm-session
@@ -747,6 +748,51 @@ KeySysShowDesktop unmaps all windows to show the desktop.
 .TP
 .B Alt+Ctrl+h
 KeySysCollapseTaskBar hides the taskbar.
+
+.PD 1
+.SH MOUSE BINDINGS
+.PD 0
+
+You can control windows by a modified mouse button press:
+
+.TP
+.B Alt+Pointer_Button1
+MouseWinMove moves the window under the mouse over the screen.
+
+.TP
+.B Alt+Pointer_Button3
+MouseWinSize resizes the window.
+Keep the key and button pressed.
+To enlarge the window move the mouse button away from the center.
+To shrink it move towards the center.
+
+.TP
+.B Ctrl+Alt+Pointer_Button1
+MouseWinRaise raises the window under the mouse.
+
+.PP
+Clicking on the
+.I desktop
+activates a menu.
+The middle button shows the window list (DesktopWinListButton=2).
+The right button shows the root menu (DesktopMenuButton=3).
+
+.PP
+The
+.I title frame
+of a window also listens for mouse clicks.
+Left double clicking maximizes the window (TitleBarMaximizeButton=1).
+Middle double clicking rolls up the window (TitleBarRollupButton=2).
+Pressing a mouse button and moving it will move the window.
+Alt + left button lowers the window.
+
+.PP
+When the mouse is on the
+.I window frame
+then a left click raises the window.
+Dragging with the left button down resizes the window.
+Clicking the right button pops up the context menu.
+Dragging with the right button moves the window.
 
 
 .PD 1
